# Job_AI_automation

./: RAW_TOOL_LINKS.txt  README.md  RECOVERED_LINKS.txt  applied_jobs_tracker.csv  extract_links.py  final_outreach_report.md  follow_up.py  parse_results.py  pyproject.toml  test_email.py  test_strict_tailor.py
cover_letters/: Indeedcom_Senior_Software_Engineer_CoverLetter.md
src/my_linkedin_automation/: crew.py  main.py
src/my_linkedin_automation/config/: agents.yaml  tasks.yaml
tailored_resumes/: Chelsi_Jain_Indeedcom_Resume.md
