[project]
name = "my_linkedin_automation"
version = "0.1.0"
description = "my_linkedin_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.9.3",
    "crewai[google-genai,tools]==1.9.3",
    "pypdf2>=3.0.1",
]

[project.scripts]
my_linkedin_automation = "my_linkedin_automation.main:run"
run_crew = "my_linkedin_automation.main:run"
train = "my_linkedin_automation.main:train"
replay = "my_linkedin_automation.main:replay"
test = "my_linkedin_automation.main:test"
run_with_trigger = "my_linkedin_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
